--- a/index.html
+++ b/index.html
@@ -89,8 +89,16 @@
                 if (Math.random() * 100 < successRate) {
                     level++;
                     height += level * 1.5;
-                    successRate -= 1.5;  
+                    successRate -= 1.7 * (1 + (level - 1) / 10);   
+                    if (level === 15) {
+                    itemCount += 3;
+                }
+                    if (level === 20) {
+                    itemCount += 4;
+                }
 
+
+                    
                     document.getElementById("level").innerText = level;
                     document.getElementById("height").innerText = height.toFixed(1);  
                     document.getElementById("successRate").innerText = successRate.toFixed(1);
@@ -118,7 +126,7 @@
                 gameOver();
             }
         } else {
-            alert("게임 오버 !")
+            alert("게임 오버")
             // 아이템 갯수가 0이면 바로 초기화
             gameOver();
         }
