--- a/index.html
+++ b/index.html
@@ -9,7 +9,324 @@
             text-align: center;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #f0f0f0;
+       <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>이석준 강화 게임</title>
+    <style>
+        body {
+            text-align: center;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f0f0f0;
             margin: 0;
+            padding: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        #game-container {
+            background-color: #fff;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 80%; /* 적절한 비율로 조절 */
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        button {
+            background-color: #4caf50;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
+        #stats {
+            margin-top: 20px;
+        }
+
+        #item-info {
+            margin-top: 20px;
+        }
+
+        #menu-button {
+            cursor: pointer;
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            z-index: 2;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+        }
+
+        #menu-button div {
+            width: 30px;
+            height: 4px;
+            background-color: #333;
+            margin: 6px 0;
+            transition: 0.4s;
+        }
+
+        #menu-container {
+            position: fixed;
+            top: 0;
+            right: -300px; /* 수정된 부분 */
+            width: 200px;
+            height: 100%;
+            background-color: #f0f0f0;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            padding: 20px;
+            z-index: 1;
+            transition: right 0.4s ease-in-out;
+        }
+
+        #menu {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            margin-top: 20px;
+        }
+
+        #menu a {
+            text-decoration: none;
+            color: #333;
+            padding: 10px 0;
+            font-size: 18px;
+            border-bottom: 1px solid #ccc;
+            width: 100%;
+            transition: background-color 0.3s;
+        }
+
+        #menu a:hover {
+            background-color: #ddd;
+        }
+
+        #overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 0;
+        }
+
+        #overlay.open {
+            display: block;
+        }
+
+        @media only screen and (max-width: 600px) {
+            /* 모바일 화면 크기에 대한 스타일 */
+            #game-container {
+                width: 90%; /* 적절한 비율로 조절 */
+            }
+        }
+    </style>
+</head>
+<body>
+
+    <div id="game-container">
+        <h1>이석준 강화 게임</h1>
+
+        <button onclick="enhanceCharacter()" id="enhanceButton">강화하기</button>
+
+        <div id="stats">
+            <p>현재 레벨: <span id="level">0</span></p>
+            <p>현재 키: <span id="height">170</span> cm</p>
+            <p>강화 성공 확률: <span id="successRate">100</span>%</p>
+            <p id="bestRecord">최고 기록: 레벨 0, 키 170.0 cm</p>
+        </div>
+
+        <div id="item-info">
+            <p>아이템 사용 가능 횟수: <span id="itemCount">3</span></p>
+        </div>
+    </div>
+
+    <div id="menu-button" onclick="toggleMenu()">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
+    <div id="menu-container">
+        <div id="menu">
+            <a href="#">업적 시스템</a>
+            <a href="#">패치 노트</a>
+            <!-- Add more menu items as needed -->
+        </div>
+    </div>
+
+    <div id="overlay" onclick="closeMenu()"></div>
+
+    <script>
+        var level = 0;
+        var height = 170;
+        var successRate = 100;
+        var isButtonDisabled = false;
+        var itemCount = 3;
+
+        function enhanceCharacter() {
+            if (isButtonDisabled) {
+                return;
+            }
+
+            isButtonDisabled = true;
+            document.getElementById("enhanceButton").disabled = true;
+
+            setTimeout(function() {
+                if (Math.random() * 100 < successRate) {
+                    level++;
+                    height += level * 1.5;
+                    successRate -= 1.7 * (1 + (level - 1) / 10);   
+                    if (level === 15) {
+                        itemCount += 3;
+                    }
+                    if (level === 20) {
+                        itemCount += 4;
+                    }
+
+                    document.getElementById("level").innerText = level;
+                    document.getElementById("height").innerText = height.toFixed(1);  
+                    document.getElementById("successRate").innerText = successRate.toFixed(1);
+
+                    updateBestRecord();
+                } else {
+                    askToUseItem();
+                }
+
+                isButtonDisabled = false;
+                document.getElementById("enhanceButton").disabled = false;
+            }, 250);
+        }
+
+        function askToUseItem() {
+            if (itemCount > 0) {
+                var useItem = confirm("강화에 실패했습니다. 아이템을 사용하시겠습니까?");
+                if (useItem) {
+                    useItemFunction();
+                } else {
+                    gameOver();
+                }
+            } else {
+                alert("게임 오버");
+                gameOver();
+            }
+        }
+
+        function useItemFunction() {
+            if (itemCount > 0) {
+                itemCount--;
+                document.getElementById("itemCount").innerText = itemCount;
+                updateBestRecord();
+            } else {
+                gameOver();
+            }
+        }
+
+        function gameOver() {
+            level = 0;
+            height = 170;
+            successRate = 100;
+            itemCount = 3;
+
+            document.getElementById("level").innerText = level;
+            document.getElementById("height").innerText = height.toFixed(1);
+            document.getElementById("successRate").innerText = successRate.toFixed(1);
+            document.getElementById("itemCount").innerText = itemCount;
+
+            updateBestRecord();
+        }
+
+        function updateBestRecord() {
+            var bestLevel = parseInt(localStorage.getItem("bestLevel")) || 0;
+            var bestHeight = parseFloat(localStorage.getItem("bestHeight")) || 170;
+
+            if (level > bestLevel) {
+                bestLevel = level;
+                localStorage.setItem("bestLevel", bestLevel);
+            }
+
+            if (height > bestHeight) {
+                bestHeight = height;
+                localStorage.setItem("bestHeight", bestHeight);
+            }
+
+            document.getElementById("bestRecord").innerText = `최고 기록: 레벨 ${bestLevel}, 키 ${bestHeight.toFixed(1)} cm`;
+        }
+
+        var isMenuOpen = false;
+
+        function toggleMenu() {
+            var menuContainer = document.getElementById("menu-container");
+            var overlay = document.getElementById("overlay");
+            var menuButtonDivs = document.getElementById("menu-button").getElementsByTagName("div");
+
+            if (isMenuOpen) {
+                menuContainer.style.right = "-250px";
+                overlay.classList.remove("open");
+                menuButtonDivs[0].style.transform = "rotate(0deg)";
+                menuButtonDivs[1].style.opacity = "1";
+                menuButtonDivs[2].style.transform = "rotate(0deg)";
+                isMenuOpen = false;
+            } else {
+                menuContainer.style.right = "0px";
+                overlay.classList.add("open");
+                menuButtonDivs[0].style.transform = "rotate(-45deg)";
+                menuButtonDivs[1].style.opacity = "0";
+                menuButtonDivs[2].style.transform = "rotate(45deg)";
+                isMenuOpen = true;
+            }
+        }
+
+        function closeMenu() {
+            var menuContainer = document.getElementById("menu-container");
+            var overlay = document.getElementById("overlay");
+            var menuButtonDivs = document.getElementById("menu-button").getElementsByTagName("div");
+
+            if (isMenuOpen) {
+                menuContainer.style.right = "-250px";
+                overlay.classList.remove("open");
+                menuButtonDivs[0].style.transform = "rotate(0deg)";
+                menuButtonDivs[1].style.opacity = "1";
+                menuButtonDivs[2].style.transform = "rotate(0deg)";
+                isMenuOpen = false;
+            }
+        }
+
+        function preventMenuClose(event) {
+            var menuContainer = document.getElementById("menu-container");
+            if (isMenuOpen && window.getComputedStyle(menuContainer).right === "0px") {
+                event.stopPropagation();
+            }
+        }
+
+        document.getElementById("menu-container").addEventListener("click", function (event) {
+            preventMenuClose(event);
+        });
+
+    </script>
+
+</body>
+</html>
+     margin: 0;
             padding: 0;
             display: flex;
             align-items: center;
