--- a/index.html
+++ b/index.html
@@ -9,17 +9,6 @@
             text-align: center;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #f0f0f0;
-       <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>이석준 강화 게임</title>
-    <style>
-        body {
-            text-align: center;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f0f0f0;
             margin: 0;
             padding: 0;
             display: flex;
@@ -133,6 +122,15 @@
             display: block;
         }
 
+
+        #item-info {
+            margin-top: 20px;
+        }
+
+        #big-hit-probability {
+            margin-top: 10px;
+        }
+
         @media only screen and (max-width: 600px) {
             /* 모바일 화면 크기에 대한 스타일 */
             #game-container {
@@ -157,7 +155,8 @@
 
         <div id="item-info">
             <p>아이템 사용 가능 횟수: <span id="itemCount">3</span></p>
-        </div>
+        <p id="big-hit-probability">Big Hit 확률: <span id="bigHitProbability">0.000</span>%</p>
+    </div>
     </div>
 
     <div id="menu-button" onclick="toggleMenu()">
@@ -194,6 +193,16 @@
             setTimeout(function() {
                 if (Math.random() * 100 < successRate) {
                     level++;
+
+                    var bigHitProbability = 1 / 8 * (100 - successRate);
+                    if (Math.random() * 100 < bigHitProbability) {
+                        level += 2;
+                        document.getElementById("bigHitProbability").innerText = bigHitProbability.toFixed(3);
+                    } else {
+                        document.getElementById("bigHitProbability").innerText = "0.000";
+                    }
+
+
                     height += level * 1.5;
                     successRate -= 1.7 * (1 + (level - 1) / 10);   
                     if (level === 15) {
@@ -202,7 +211,7 @@
                     if (level === 20) {
                         itemCount += 4;
                     }
-
+                    document.getElementById("bigHitProbability").innerText = bigHitProbability.toFixed(3);
                     document.getElementById("level").innerText = level;
                     document.getElementById("height").innerText = height.toFixed(1);  
                     document.getElementById("successRate").innerText = successRate.toFixed(1);
@@ -322,182 +331,6 @@
             preventMenuClose(event);
         });
 
-    </script>
-
-</body>
-</html>
-     margin: 0;
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-
-        #game-container {
-            background-color: #fff;
-            border-radius: 10px;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            color: #333;
-        }
-
-        button {
-            background-color: #4caf50;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-
-        #stats {
-            margin-top: 20px;
-        }
-
-        #item-info {
-            margin-top: 20px;
-        }
-    </style>
-</head>
-<body>
-
-    <div id="game-container">
-        <h1>이석준 강화 게임</h1>
-
-        <button onclick="enhanceCharacter()" id="enhanceButton">강화하기</button>
-
-        <div id="stats">
-            <p>현재 레벨: <span id="level">0</span></p>
-            <p>현재 키: <span id="height">170</span> cm</p>
-            <p>강화 성공 확률: <span id="successRate">100</span>%</p>
-            <p id="bestRecord">최고 기록: 레벨 0, 키 170.0 cm</p>
-        </div>
-
-        <div id="item-info">
-            <p>아이템 사용 가능 횟수: <span id="itemCount">3</span></p>
-        </div>
-    </div>
-
-    <script>
-        var level = 0;
-        var height = 170;
-        var successRate = 100;
-        var isButtonDisabled = false;
-        var itemCount = 3;
-
-        function enhanceCharacter() {
-            if (isButtonDisabled) {
-                return;
-            }
-
-            isButtonDisabled = true;
-            document.getElementById("enhanceButton").disabled = true;
-
-            setTimeout(function() {
-                if (Math.random() * 100 < successRate) {
-                    level++;
-                    height += level * 1.5;
-                    successRate -= 1.7 * (1 + (level - 1) / 10);   
-                    if (level === 15) {
-                    itemCount += 3;
-                }
-                    if (level === 20) {
-                    itemCount += 4;
-                }
-
-
-                    
-                    document.getElementById("level").innerText = level;
-                    document.getElementById("height").innerText = height.toFixed(1);  
-                    document.getElementById("successRate").innerText = successRate.toFixed(1);
-
-                    // 최고 기록 업데이트
-                    updateBestRecord();
-                } else {
-                    // 강화 실패 시 아이템 사용 여부 물어보기
-                    askToUseItem();
-                }
-
-                isButtonDisabled = false;
-                document.getElementById("enhanceButton").disabled = false;
-            }, 250);
-        }
-
-        function askToUseItem() {
-        if (itemCount > 0) {
-            var useItem = confirm("강화에 실패했습니다. 아이템을 사용하시겠습니까?");
-            if (useItem) {
-                // 아이템 사용 함수 호출
-                useItemFunction();
-            } else {
-                // 게임 오버 시 모든 정보 초기화
-                gameOver();
-            }
-        } else {
-            alert("게임 오버")
-            // 아이템 갯수가 0이면 바로 초기화
-            gameOver();
-        }
-    }
-
-        // 아이템 사용 함수
-        function useItemFunction() {
-            if (itemCount > 0) {
-                // 아이템 사용 횟수 감소 및 화면 업데이트
-                itemCount--;
-                document.getElementById("itemCount").innerText = itemCount;
-
-                // 최고 기록 업데이트
-                updateBestRecord();
-            } else {
-                // 게임 오버 시 모든 정보 초기화
-                gameOver();
-            }
-        }
-
-        function gameOver() {
-            // 게임 오버 시 모든 정보 초기화
-            level = 0;
-            height = 170;
-            successRate = 100;
-            itemCount = 3;
-
-            // 화면 업데이트
-            document.getElementById("level").innerText = level;
-            document.getElementById("height").innerText = height.toFixed(1);
-            document.getElementById("successRate").innerText = successRate.toFixed(1);
-            document.getElementById("itemCount").innerText = itemCount;
-
-            // 최고 기록 업데이트
-            updateBestRecord();
-        }
-
-        function updateBestRecord() {
-            // 최고 기록 업데이트
-            var bestLevel = parseInt(localStorage.getItem("bestLevel")) || 0;
-            var bestHeight = parseFloat(localStorage.getItem("bestHeight")) || 170;
-
-            if (level > bestLevel) {
-                bestLevel = level;
-                localStorage.setItem("bestLevel", bestLevel);
-            }
-
-            if (height > bestHeight) {
-                bestHeight = height;
-                localStorage.setItem("bestHeight", bestHeight);
-            }
-
-            document.getElementById("bestRecord").innerText = `최고 기록: 레벨 ${bestLevel}, 키 ${bestHeight.toFixed(1)} cm`;
-        }
     </script>
 
 </body>
