--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             border-radius: 10px;
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            /*  width: 80%;  */
+            width: 40%; 
         }
 
         h1 {
