--- a/note.html
+++ b/note.html
@@ -1,1 +1,45 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>패치 노트</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 600px;
+            margin: 20px auto;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        p {
+            color: #666;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>패치 노트</h1>
+
+    <p><strong>버전 1.0.0</strong></p>
+    <ul>
+        <li>새로운 기능 추가: ...</li>
+        <li>버그 수정: ...</li>
+        <li>개선된 성능: ...</li>
+    </ul>
+
+    <p><strong>버전 1.1.0</strong></p>
+    <ul>
+        <li>새로운 콘텐츠 추가: ...</li>
+        <li>보안 강화: ...</li>
+        <li>UI 업데이트: ...</li>
+    </ul>
+
+    <!-- 추가적인 버전 내용은 이어서 작성하실 수 있습니다 -->
+
+</body>
+</html>
