--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <script>
 
 function goToPatchNote() {
-            window.location.href = "https://saufikr.github.io/grow-sucksuck-Lee/note";
+            window.location.href = "https://saufikr.github.io/grow-sucksuck-Lee/c/note.html";
         }
 
         var level = 0;
