--- a/c/note.html
+++ b/c/note.html
@@ -6,12 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>패치 노트</title>
     <style>
-        body {
+      /*  body {
             font-family: Arial, sans-serif;
             max-width: 600px;
             margin: 20px auto;
-        }
+        } */
 
+        body {
+            text-align: center;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+        
         h1 {
             color: #333;
         }
