--- a/c/note.html
+++ b/c/note.html
@@ -13,15 +13,10 @@
         } */
 
         body {
-            text-align: center;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
+            max-width: 600px;
+            margin: 20px auto;
         }
         
         h1 {
